popup box updated

--- a/src/app/leave-management/leavemanagement-list/leavemanagement-list.component.html
+++ b/src/app/leave-management/leavemanagement-list/leavemanagement-list.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-    <button [routerLink]="['/leave/add/0']">LeaveRequest</button>
-    <table class="table ">
+    <!-- <button [routerLink]="['/leave/add/0']">LeaveRequest</button> -->
+
+    <table class=" table ">
         <!-- //<button>">Leave Request</button>> -->
         <thead>
             <th>Employee Name</th>
@@ -11,15 +12,21 @@
             <th></th>
         </thead>
         <tr *ngFor="let col of leave ">
-            <td>{{col.employeename}}</td>
+            <td>{{col.name}}</td>
             <td>{{col.leavetype}}</td>
             <td>{{col.reason}}</td>
             <td>{{col.startdate}}</td>
             <td>{{col.enddate}}</td>
-            <td><a (click)="delete(col.id)">Delete</a></td>
-            <td><a [routerLink]="['/leave/edit',col.id]">Edit</a></td>
-            <!-- <td><a routerLink="leave">View</a></td> -->
+            <!-- <td><a (click)="delete(col.id)">Delete</a></td> -->
+            <td><button mat-button color="warn">Delete</button></td>
+            <!-- <td><a [routerLink]="['/leave/edit',col.id]">Edit</a></td> -->
+            <td><button mat-raised-button color="accent">Edit</button></td>
+            <!-- <td><button mat-raise-button color="accent">Edit</button></td> -->
+
 
         </tr>
     </table>
+
+    <button mat-raised-button color="primary" (click)="openDialog()">Leave Request</button>
+
 </div>
