--- a/src/app/leave-management/leavemanagement-list/leavemanagement-list.component.html
+++ b/src/app/leave-management/leavemanagement-list/leavemanagement-list.component.html
@@ -17,10 +17,10 @@
             <td>{{col.reason}}</td>
             <td>{{col.startdate}}</td>
             <td>{{col.enddate}}</td>
-            <!-- <td><a (click)="delete(col.id)">Delete</a></td> -->
-            <td><button mat-button color="warn">Delete</button></td>
-            <!-- <td><a [routerLink]="['/leave/edit',col.id]">Edit</a></td> -->
-            <td><button mat-raised-button color="accent">Edit</button></td>
+            <td><a (click)="delete(col.id)">Delete</a></td>
+            <!-- <td><button mat-button color="warn">Delete</button></td> -->
+            <td><a [routerLink]="['/leave/edit',col.id]">Edit</a></td>
+            <!-- <td><button mat-raised-button color="accent">Edit</button></td> -->
             <!-- <td><button mat-raise-button color="accent">Edit</button></td> -->
 
 
