--- a/src/app/leave-management/leave-request/leave-request.component.scss
+++ b/src/app/leave-management/leave-request/leave-request.component.scss
@@ -1,3 +1,15 @@
 div {
-    padding: 30px;
+    padding: 15px;
+}
+.container label{
+    text-align:right;
+     padding-right:20px;
+     display:inline-block;
+    min-width:160px;
+}
+.container input{
+    text-align: left;
+    padding-left: 20px;
+    display: inline-block;
+    min-width: 110px;
 }
