--- a/src/app/leave-management/leave-request/leave-request.component.html
+++ b/src/app/leave-management/leave-request/leave-request.component.html
@@ -1,23 +1,24 @@
 <div class="container">
-    <h2>Leave Request</h2>
+    <h2>{{header}}</h2>
     <div>
         <form [formGroup]="leavereq" (ngSubmit)="Submit()">
-            <!-- <mat-grid-list cols="2" [cols]="breakpoint" rowHeight="85px" (window:resize)="onResize($event)"> -->
 
-            <div >
+            <div>
                 <label>Employee Name</label>
                 <input type="text" formControlName="name" class="form-control" />
             </div>
             <div class="form-group">
                 <label>Leave Type</label>
-                <select formControlName="leavetype"> 
+                <select class="form-control" formControlName="leavetype"> 
+              <option value="" disabled selected hidden>--Select--</option>
                  <option>Sick Leave</option>
                  <option>Casual Leave</option>
              </select>
             </div>
             <div>
                 <label>Reason</label>
-                <input type="text" formControlName="reason" class="form-control" />
+                <!-- <input type="text" formControlName="reason" class="form-control" /> -->
+                <textarea class="form-control" formControlName="reason" rows="3" cols="25"></textarea>
             </div>
             <div>
                 <label>Strat Date</label>
@@ -27,14 +28,11 @@
                 <label>End Date</label>
                 <input type="date" formControlName="enddate" class="form-control" />
             </div>
-            <!-- </mat-grid-list> -->
-            <div>
-                <button type="submit">Save</button>
-                <button type="submit" (click)="onCancel()">Cancel</button>
-            </div>
 
-               
-           
+            <div>
+                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="button" class="btn btn-primary" (click)="onCancel()">Cancel</button>
+            </div>
         </form>
     </div>
 </div>
