--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
 
-// @import url('./assets/bootstrap.min.css');
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import url('./assets/bootstrap.min.css');
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.confirm-dialog-container .mat-dialog-container {
+    border-radius: .10em .10em .2em .2em;
+    padding: 0px;
+}
+
+.confirm-dialog-container .content-container {
+    margin: 5px 5px 10px 5px;
+    color: #8f9cb5;
+    display: flex;
+}
+
+.confirm-dialog-container #close-icon {
+    margin-left: auto;
+    order: 2;
+    font-weight: bolder;
+}
+
+.confirm-dialog-container #close-icon:hover {
+    cursor: pointer;
+}
+
+.confirm-dialog-container #no-button {
+    height: 50px;
+    width: 50%;
+    color: white;
+    border-radius: 0px;
+}
+
+.confirm-dialog-container #yes-button {
+    height: 50px;
+    width: 50%;
+    color: white;
+    border-radius: 0px;
+}
+
+.confirm-dialog-container span.content-span {
+    padding: 35px 16px;
+    text-align: center;
+    font-size: 20px;
+}
