--- a/src/app/leave-management/leave-request/leave-request.component.html
+++ b/src/app/leave-management/leave-request/leave-request.component.html
@@ -30,8 +30,8 @@
             </div>
 
             <div>
-                <button type="submit" class="btn btn-primary">Save</button>
-                <button type="button" class="btn btn-primary" (click)="onCancel()">Cancel</button>
+                <button type="submit" class="btn btn-primary mr-4 mt-4">Save</button>
+                <button type="button" class="btn btn-primary mt-4" (click)="onCancel()">Cancel</button>
             </div>
         </form>
     </div>
