--- a/src/app/leave-management/leave-request/leave-request.component.html
+++ b/src/app/leave-management/leave-request/leave-request.component.html
@@ -6,6 +6,8 @@
             <div>
                 <label>Employee Name</label>
                 <input type="text" formControlName="name" class="form-control" />
+                <div *ngIf="leavereq.controls['name'].hasError('required')"  style="color: red;">Fields required</div>
+                <div class="error" *ngIf="leavereq.controls['name'].hasError('pattern')" >Enter only Alphabets</div>
             </div>
             <div class="form-group">
                 <label>Leave Type</label>
@@ -14,23 +16,27 @@
                  <option>Sick Leave</option>
                  <option>Casual Leave</option>
              </select>
+             <div *ngIf="leavereq.controls['leavetype'].hasError('required')"  style="color: red;">Fields required</div>
             </div>
             <div>
                 <label>Reason</label>
                 <!-- <input type="text" formControlName="reason" class="form-control" /> -->
                 <textarea class="form-control" formControlName="reason" rows="3" cols="25"></textarea>
+                <div *ngIf="leavereq.controls['reason'].hasError('required')"  style="color: red;">Fields required</div>
             </div>
             <div>
                 <label>Strat Date</label>
                 <input type="date" formControlName="startdate" class="form-control" />
+                <div *ngIf="leavereq.controls['startdate'].hasError('required')"  style="color: red;">Fields required</div>
             </div>
             <div>
                 <label>End Date</label>
                 <input type="date" formControlName="enddate" class="form-control" />
+                <div *ngIf="leavereq.controls['enddate'].hasError('required')"  style="color: red;">Fields required</div>
             </div>
 
             <div>
-                <button type="submit" class="btn btn-primary mr-4 mt-4">Save</button>
+                <button type="submit" [disabled]="!leavereq.valid" class="btn btn-primary mr-4 mt-4">Save</button>
                 <button type="button" class="btn btn-primary mt-4" (click)="onCancel()">Cancel</button>
             </div>
         </form>
