mat-form updated

--- a/src/app/leave-management/leave-request/leave-request.component.html
+++ b/src/app/leave-management/leave-request/leave-request.component.html
@@ -2,43 +2,48 @@
     <h2>{{header}}</h2>
     <div>
         <form [formGroup]="leavereq" (ngSubmit)="Submit()">
+            <mat-form-field class="margin-block">
+                <mat-label>Employee Name</mat-label>
+                <input type="text" matInput formControlName="name" class="form-control" />
+                <mat-error *ngIf="leavereq.controls['name'].hasError('required')"></mat-error>
+                <mat-error class="error" *ngIf="leavereq.controls['name'].hasError('pattern')"></mat-error>
 
-            <div>
-                <label>Employee Name</label>
-                <input type="text" formControlName="name" class="form-control" />
-                <div *ngIf="leavereq.controls['name'].hasError('required')"  style="color: red;">Fields required</div>
-                <div class="error" *ngIf="leavereq.controls['name'].hasError('pattern')" >Enter only Alphabets</div>
-            </div>
-            <div class="form-group">
-                <label>Leave Type</label>
-                <select class="form-control" formControlName="leavetype"> 
-              <option value="" disabled selected hidden>--Select--</option>
-                 <option>Sick Leave</option>
-                 <option>Casual Leave</option>
-             </select>
-             <div *ngIf="leavereq.controls['leavetype'].hasError('required')"  style="color: red;">Fields required</div>
-            </div>
-            <div>
-                <label>Reason</label>
-                <!-- <input type="text" formControlName="reason" class="form-control" /> -->
-                <textarea class="form-control" formControlName="reason" rows="3" cols="25"></textarea>
-                <div *ngIf="leavereq.controls['reason'].hasError('required')"  style="color: red;">Fields required</div>
-            </div>
-            <div>
-                <label>Strat Date</label>
-                <input type="date" formControlName="startdate" class="form-control" />
-                <div *ngIf="leavereq.controls['startdate'].hasError('required')"  style="color: red;">Fields required</div>
-            </div>
-            <div>
-                <label>End Date</label>
-                <input type="date" formControlName="enddate" class="form-control" />
-                <div *ngIf="leavereq.controls['enddate'].hasError('required')"  style="color: red;">Fields required</div>
-            </div>
+            </mat-form-field>
+            <mat-form-field class="margin-block">
 
-            <div>
-                <button type="submit" [disabled]="!leavereq.valid" class="btn btn-primary mr-4 mt-4">Save</button>
-                <button type="button" class="btn btn-primary mt-4" (click)="onCancel()">Cancel</button>
-            </div>
+                <mat-label>Leave Type</mat-label>
+                <mat-select class="form-control" matInput formControlName="leavetype">
+                    <mat-option value="" disabled selected hidden>--Select--</mat-option>
+                    <mat-option value="Sick Leave">Sick Leave</mat-option>
+                    <mat-option value="Casual Leave">Casual Leave</mat-option>
+                    <mat-error *ngIf="leavereq.controls['leavetype'].hasError('required')"></mat-error>
+                </mat-select>
+
+            </mat-form-field>
+
+            <mat-form-field class="margin-block">
+                <mat-label>Reason</mat-label>
+                <textarea class="form-control" matInput formControlName="reason" rows="3" cols="25"></textarea>
+                <mat-error *ngIf="leavereq.controls['reason'].hasError('required')"></mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="margin-block">
+
+                <mat-label>Strat Date</mat-label>
+                <input type="date" matInput formControlName="startdate" class="form-control" />
+                <mat-error *ngIf="leavereq.controls['startdate'].hasError('required')"></mat-error>
+
+            </mat-form-field>
+            <mat-form-field class="margin-block">
+
+                <mat-label>End Date</mat-label>
+                <input type="date" matInput formControlName="enddate" class="form-control" />
+                <mat-error *ngIf="leavereq.controls['enddate'].hasError('required')"></mat-error>
+
+            </mat-form-field>
+
+            <button mat-flat-button type="submit" [disabled]="!leavereq.valid" style="margin-right: 20px;" color="primary">Save</button>
+            <button mat-flat-button type="button" (click)="onCancel()" color="warn">Cancel</button>
         </form>
     </div>
 </div>
