--- a/src/app/leave-management/leavemanagement-list/leavemanagement-list.component.html
+++ b/src/app/leave-management/leavemanagement-list/leavemanagement-list.component.html
@@ -1,29 +1,35 @@
 <div class="container">
-    <!-- <button [routerLink]="['/leave/add/0']">LeaveRequest</button> -->
-
-    <table class=" table ">
-        <!-- //<button>">Leave Request</button>> -->
-        <thead>
-            <th>Employee Name</th>
-            <th>Leave Type</th>
-            <th>Reason</th>
-            <th>Start Date</th>
-            <th>End Date</th>
-            <th></th>
-        </thead>
-        <tr *ngFor="let col of leave ">
-            <td>{{col.name}}</td>
-            <td>{{col.leavetype}}</td>
-            <td>{{col.reason}}</td>
-            <td>{{col.startdate}}</td>
-            <td>{{col.enddate}}</td>
-            <!-- <td><a (click)="delete(col.id)">Delete</a></td>  -->
-            <td><button mat-button color="warn" (click)="delete(col.id)">Delete</button></td>
-            <!-- <td><a [routerLink]="['/leave/edit',col.id]">Edit</a></td> -->
-            <td><button mat-raised-button color="accent" (click)="openEditDialog(col.id)">Edit</button></td>
+    <button mat-raised-button color="primary" (click)="openEditDialog(0)">Leave Request</button>
+    <table mat-table class="table" [dataSource]="dataSource">
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Employee Name </th>
+            <td mat-cell *matCellDef="let col"> {{col.name}} </td>
+        </ng-container>
+        <ng-container matColumnDef="leavetype">
+            <th mat-header-cell *matHeaderCellDef> Leave Type </th>
+            <td mat-cell *matCellDef="let col"> {{col.leavetype}} </td>
+        </ng-container>
+        <ng-container matColumnDef="reason">
+            <th mat-header-cell *matHeaderCellDef> Reason</th>
+            <td mat-cell *matCellDef="let col"> {{col.reason}} </td>
+        </ng-container>
+        <ng-container matColumnDef="startdate">
+            <th mat-header-cell *matHeaderCellDef> Start Date</th>
+            <td mat-cell *matCellDef="let col"> {{col.startdate}} </td>
+        </ng-container>
+        <ng-container matColumnDef="enddate">
+            <th mat-header-cell *matHeaderCellDef> End Date</th>
+            <td mat-cell *matCellDef="let col"> {{col.enddate}} </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let col">
+                <button mat-button color="warn" (click)="delete(col.id)">Delete</button>
+                <button mat-raised-button color="accent" (click)="openEditDialog(col.id)">Edit</button>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
         </tr>
     </table>
-
-    <button mat-raised-button color="primary" (click)="openDialog()">Leave Request</button>
-
 </div>
