--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url('./assets/bootstrap.min.css');
+// @import url('./assets/bootstrap.min.css');
 html,
 body {
     height: 100%;
