--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,7 @@ body {
     width: 50%;
     color: white;
     border-radius: 0px;
+    margin-right: 20px;
 }
 
 .confirm-dialog-container #yes-button {
