--- a/src/app/authmodule/login/login.component.html
+++ b/src/app/authmodule/login/login.component.html
@@ -1,15 +1,27 @@
-<div>
-    <h2>Login</h2>
-    <form>
-        <mat-form-field class="marigin-block">
-            <mat-label>Email</mat-label>
-            <input matInput class="form-control">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Password</mat-label>
-            <input matInput class="form-control">
-        </mat-form-field>
-        <button mat-raised-button color="primary" style="margin-right: 20px;">Login</button>
-        <button mat-button>SignUp</button>
-    </form>
-</div>
+<mat-card>
+    <mat-card-content>
+        <div class="header">
+            <h2>Login</h2>
+        </div>
+        <form [formGroup]="login" (ngSubmit)="Login()">
+            <div class="email-input">
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input type="email" matInput class="form-control" formControlName="email" />
+                    <mat-error *ngIf="login.controls['email'].hasError('required')">Enter a valid email</mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input type="password" matInput class="form-control" formControlName="password" />
+                    <mat-error *ngIf="login.controls['password'].hasError('required')">Enter valid password</mat-error>
+                    <mat-error *ngIf="login.controls['password'].hasError('minlength')">Max length should be greater than 6</mat-error>
+                </mat-form-field>
+            </div>
+            <button mat-raised-button color="primary" style="margin-right: 20px;">Login</button>
+            <button mat-button (click)="signUp()">SignUp</button>
+        </form>
+
+    </mat-card-content>
+</mat-card>
