--- a/src/app/authmodule/register/register.component.html
+++ b/src/app/authmodule/register/register.component.html
@@ -1,24 +1,38 @@
-<div>
-    <h2>Register</h2>
-    <form>
-        <mat-form-field class="marigin-block">
-            <mat-label>Username</mat-label>
-            <input matInput class="form-control">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input matInput class="form-control">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Password</mat-label>
-            <input matInput class="form-control">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>ConfrimPassword</mat-label>
-            <input matInput class="form-control">
-        </mat-form-field>
-        <button mat-raised-button color="primary">Register</button>
-        <button mat-button>Login</button>
-
-    </form>
-</div>
+<mat-card>
+    <mat-card-content>
+        <mat-card-header>
+            <mat-card-title class="header">Register</mat-card-title>
+        </mat-card-header>
+        <form [formGroup]="register" (ngSubmit)="signUp()">
+            <div class="username-input">
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Username</mat-label>
+                    <input type="text" matInput class="form-control" formControlName="Username">
+                    <mat-error *ngIf="register.controls['Username'].hasError('required')">Enter Username</mat-error>
+                </mat-form-field>
+            </div>
+            <div class="email-input">
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input type="email" matInput class="form-control" formControlName="email">
+                    <mat-error *ngIf="register.controls['email'].hasError('required')">Enter valid email</mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input type="password" matInput class="form-control" formControlName="password">
+                    <mat-error *ngIf="register.controls['password'].hasError('required')">Enter valid password</mat-error>
+                    <mat-error *ngIf="register.controls['password'].hasError('minlength')">enter atleast 6 characters</mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>ConfrimPassword</mat-label>
+                    <input type="password" matInput class="form-control" formControlName="ConfrimPassword">
+                </mat-form-field>
+            </div>
+            <button mat-raised-button color="primary">Register</button>
+        </form>
+    </mat-card-content>
+</mat-card>
